# smart-file-organizer

./: .flake8  .gitignore  LICENSE  README-TEST-PROJECT.md  README.md  config.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  quality.yml  release.yml
src/sfo/: __init__.py  cli.py  config.py  core.py  logger.py  mover.py  rules.py  scanner.py
tests/: test_mover.py  test_rules.py  test_scanner.py
