#[build-system]
#requires = ["setuptools", "wheel"]
#build-backend = "setuptools.build_meta"

#[project]
#name = "smart-file-organizer"
#version = "1.0.0"
#description = "A CLI tool that organizes files into structured folders"
#authors = [{name="SFO Dev"}]
#dependencies = []

#[tool.pytest.ini_options]
#testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-file-organizer"
version = "1.0.0"
description = "A CLI tool to organize files into structured folders"
authors = [
  { name="Your Name" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]